--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-4 col-sm-4">
-        <img src="/b/hfm.png" alt="HfM Karlsruhe" style="height: 100%" />
+        <img src="/b/hfm.png" alt="HfM Karlsruhe" width="400" height="222" />
       </div>
       <div class="col-md-8 col-sm-12">
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome_hfm").html_safe %><br />conf.hfm.eu</h1>
