--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,10 +16,9 @@
 <div class="background">
   <div class="container pt-9 pb-8">
     <div class="row">
-      <div class="col-md-4 col-sm-4">
-        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" /></a>
-      </div>
-      <div class="col-md-8 col-sm-8">
+      <div class="col-md-12 col-sm-12">
+        <div style="float: left;">
+        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" /></a></div>
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome_hfm").html_safe %><br /><strong>conf.hfm.eu</strong></h1>
       </div>
     </div>
