--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,14 +16,14 @@
 <div class="background">
   <div class="container pt-9 pb-8">
     <div class="row">
-      <div class="col-md-12 col-sm-12">
-        <div style="float: left;">
-        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" /></a></div>
+      <div class="col-md-12 col-sm-12 text-center">
+        <p>
+        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" /></a></p>
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome_hfm").html_safe %><br /><strong>conf.hfm.eu</strong></h1>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 col-sm-12 text-center">
+    <div class="row mt-3">
+      <div class="col-md-12 col-sm-12">
         <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about_hfm_1").html_safe %></p>
         <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about_hfm_2").html_safe %></p>
         <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about_hfm_3").html_safe %></p>
