--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,11 +14,11 @@
 %>
 
 <div class="background">
-  <div class="container pt-9 pb-8">
+  <div class="container pt-7 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
         <p>
-        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" style="margin-left: -70px; margin-top: -40px; margin-bottom: 30px;"/></a></p>
+        <a href="https://www.hfm-karlsruhe.de/"><img src="/b/hfm.png" alt="HfM Karlsruhe" width="200" height="111" style="margin-left: -70px; margin-bottom: 30px;"/></a></p>
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome_hfm").html_safe %><br /><strong>conf.hfm.eu</strong></h1>
       </div>
     </div>
